# zephyrmodules

./: .gitignore  CMakeLists.txt  Kconfig  README.md
zb8/: CMakeLists.txt  Kconfig  out.hex  readme.md
zb8/appbledfuloader/: nrf51_pca10028.overlay
zb8/apps/app_bledfu/: CMakeLists.txt  prj.conf
zb8/apps/bledfuloader/: prj.conf
zb8/apps/test/: prj.conf
zb8/bledfubootloader/: prj.conf
zb8/bledfubootloader/src/: main.c  nrf_dfu.c  nrf_dfu.h
zb8/bootloader/: CMakeLists.txt  nrf51_pca10028.overlay  nrf52_pca10040.overlay  prj.conf
zb8/bootloader/src/: keys.c  main.c
zb8/bootloaders/bledfu_bootloader/: prj.conf
zb8/bootloaders/swap_bootloader/: boot.overlay  prj.conf
zb8/docs/: getting_started.md
zb8/fsl/: fsl.overlay  prj.conf
zb8/fsl/src/: main.c
zb8/loader/bledfu_loader/: ldr.overlay  prj.conf
zb8/overlays/: nrf51_pca10028_di.overlay  nrf51_pca10028_si.overlay  nrf52_pca10040_di.overlay  nrf52_pca10040_si.overlay  twr_ke18f_di.overlay
zb8/scripts/: setup.py  zb8tool.py
zb8/scripts/zb8tool/: image.py  main.py
zb8/swapper/: prj.conf  swapper.overlay
zb8/swapper/src/: main.c
zb8/testimg/: ones.hex  threes.hex  twos.hex
zb8/tests/: prj.conf  qemu_x86.overlay  test.code-workspace
zb8/tests/src/: main.c  test_zb_crypto.c  test_zb_flash.c  test_zb_image.c  test_zb_move.c  test_zb_tlv.c  testimages.c  testvars.c  tkeys.c
zb8/zb8/src/: zb8_confirm.c  zb8_crypto.c  zb8_dfu.c  zb8_flash.c  zb8_fsl.c  zb8_image.c  zb8_log.c  zb8_move.c  (+2 more)
zepboot/: CMakeLists.txt  Kconfig  readme.md
zepboot/bootloader/: nrf52_pca10040.overlay  prj.conf
zepboot/docs/: design.md  usage.md
zepboot/tests/: CMakeLists.txt  prj.conf
zepboot_dfu/: CMakeLists.txt  Kconfig  readme.md
zepboot_dfu/app_with_loader/: prj.conf
zepboot_dfu/app_without_loader/: CMakeLists.txt  prj.conf
(+58 files in other folders)
